--- a/YukariProject/Yukari/src/main/res/layout/activity_imagepreview.xml
+++ b/YukariProject/Yukari/src/main/res/layout/activity_imagepreview.xml
@@ -66,4 +66,12 @@
         </LinearLayout>
     </LinearLayout>
 
+    <ProgressBar
+        style="?android:attr/progressBarStyleLarge"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/progressBar"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+
 </RelativeLayout>
