--- a/YukariProject/Yukari/src/main/res/layout/activity_imagepreview.xml
+++ b/YukariProject/Yukari/src/main/res/layout/activity_imagepreview.xml
@@ -29,7 +29,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             layout="@layout/row_tweet"
-            android:layout_gravity="center"/>
+            android:layout_gravity="left"/>
 
         <LinearLayout
             android:layout_width="match_parent"
