--- a/YukariProject/Yukari/src/main/res/layout/row_loading.xml
+++ b/YukariProject/Yukari/src/main/res/layout/row_loading.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:paddingBottom="36dp">
 
     <ProgressBar
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/pbLoading"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        android:layout_gravity="center" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -20,7 +20,6 @@
         android:text="more"
         android:id="@+id/tvLoading"
         android:textColor="#777"
-        android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_gravity="center" />
 
-</RelativeLayout>
+</FrameLayout>
