--- a/YukariProject/Yukari/src/main/res/xml/commands.xml
+++ b/YukariProject/Yukari/src/main/res/xml/commands.xml
@@ -1,20 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-    <Preference
-        android:title="::cmd"
-        android:summary="Open this activity" />
-    <Preference
-        android:title="::jb"
-        android:summary="Javaビームｗｗｗｗｗｗ" />
-    <Preference
-        android:title="::sb"
-        android:summary="違法エビビーム" />
-    <Preference
-        android:title="::bb"
-        android:summary="\@la0c bbop" />
-    <CheckBoxPreference
-        android:key="cmd_cn"
-        android:title="::cn &lt;NAME&gt;"
-        android:summary="Change Name" />
+    <PreferenceCategory android:title="投稿欄コマンド (ひみつだよ!)">
+        <Preference
+            android:title="::cmd"
+            android:summary="この画面を開く" />
+        <Preference
+            android:title="::jb"
+            android:summary="Javaビームｗｗｗｗｗｗ" />
+        <Preference
+            android:title="::sb"
+            android:summary="違法エビビーム" />
+        <Preference
+            android:title="::bb"
+            android:summary="\@la0c bbop" />
+        <CheckBoxPreference
+            android:key="cmd_cn"
+            android:title="::cn &lt;NAME&gt;"
+            android:summary="発言者の名前を&lt;NAME&gt;に変更する" />
+    </PreferenceCategory>
 </PreferenceScreen>
