--- a/YukariProject/Yukari/src/main/res/layout/activity_imagepreview.xml
+++ b/YukariProject/Yukari/src/main/res/layout/activity_imagepreview.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <com.loopj.android.image.SmartImageView
+    <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/ivPreviewImage"
