--- a/Yukari/src/main/res/xml/pref.xml
+++ b/Yukari/src/main/res/xml/pref.xml
@@ -18,11 +18,11 @@
             android:key="pref_bottom_stack"
             android:title="メニューを下に寄せる"
             android:summary="ツイート詳細画面のメニューを下寄せにします"/>
-        <CheckBoxPreference
+        <!--<CheckBoxPreference
             android:key="pref_guard_nuisance"
             android:title="クライアントチェック"
             android:summary="お気に入り登録前に発言元クライアント次第で確認をとります"
-            android:defaultValue="true"/>
+            android:defaultValue="true"/>-->
     </PreferenceCategory>
 
     <PreferenceCategory android:title="表示設定">
